--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Archit Gupta",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "express": "^4.17.1",
     "mongodb": "^3.6.2",
     "mongoose": "^5.10.15",
